--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							</div>
 						</div>
 
-					<!-- 	<div class="promo-video-block">
+						<div class="promo-video-block">
 							<img src="img/video_bg.jpg" alt="">
 							<video autoplay="autoplay" loop="loop" muted="muted">
 								<source src="video/videoplayback.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
@@ -124,7 +124,7 @@
 								Тег video не поддерживается вашим браузером. 
 								<a href="video/videoplayback_1.mp4">Скачайте видео</a>.
 							</video>
-						</div> -->
+						</div>
 
 					</div>
 
