--- a/news.html
+++ b/news.html
@@ -157,7 +157,7 @@
 
 								<div class="col col-2 right">
 									
-									<dib class="news-big-slider-block">
+									<div class="news-big-slider-block">
 
 										<div class="news-big-slider" data-slider = "news-slider">
 											
@@ -261,7 +261,7 @@
 
 										</div>
 
-									</dib>
+									</div>
 
 								</div>			
 
