--- a/we_created.html
+++ b/we_created.html
@@ -110,6 +110,9 @@
 												<li><a href="#">Социальные программы</a></li>
 												<li><a href="#">Юбилеи компаний</a></li>
 												<li><a href="#">Социальные программы</a></li>
+												<li><a href="#">Выставки открытия компаний</a></li>
+												<li><a href="#">Спортивные мероприятия</a></li>
+												<li><a href="#">Презентационные программы</a></li>
 											</ul>
 
 											<button type="button" class="hide-slide-popup"><i class="right-arrow"></i></button>
