--- a/we_created.html
+++ b/we_created.html
@@ -132,6 +132,9 @@
 											<li><a href="#">Культурно-массовый формат</a></li>
 											<li><a href="#">Развлекательный формат</a></li>
 											<li><a href="#">Деловой формат</a></li>
+											<li><a href="#">Выставки открытия компаний</a></li>
+											<li><a href="#">Спортивные мероприятия</a></li>
+											<li><a href="#">Презентационные программы</a></li>
 										</ul>
 
 									</div>
