--- a/we_created.html
+++ b/we_created.html
@@ -81,7 +81,7 @@
 
 						<div class="h-block we-create-h">
 
-							<h2><span class="small">Мы</span>Создаем</h2>
+							<h2><span class="small">Мы</span>Создали</h2>
 
 							<div class="black-h">
 								<h4>Командообразующий формат</h4>
