--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
 
 			<!-- 404 Page -->
 
-				<div class="page-not-found center">
+				<div class="page-not-found">
 
 					<div class="center-block">
 
