--- a/about.html
+++ b/about.html
@@ -1381,7 +1381,7 @@
 
 			<!-- Slide 7 -->
 
-				<div class="slide-page slide-7">
+				<div class="slide-page slide-7" id="contacts">
 
 					<div class="h-block">
 						<h2>Котакты</h2>
