--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 					<div class="main-nav-block">
 						<ul class="main-nav">
-							<li><a href="#">Кто мы</a></li>
-							<li><a href="#">Мы создаем</a></li>
-							<li><a href="#">Мы создали</a></li>
-							<li><a href="#">Новости</a></li>
-							<li><a href="#">Контакты</a></li>
+							<li><a href="about.html">Кто мы</a></li>
+							<li><a href="we_create.html">Мы создаем</a></li>
+							<li><a href="we_created.html">Мы создали</a></li>
+							<li><a href="news.html">Новости</a></li>
+							<li><a href="about.html#contacts" class="contacts-link">Контакты</a></li>
 						</ul>
 					</div>
 
@@ -1056,7 +1056,7 @@
 
 			<!-- Slide 7 -->
 
-				<div class="slide-page slide-7">
+				<div class="slide-page slide-7" id="contacts">
 
 					<div class="h-block">
 						<h2>Котакты</h2>
