--- a/contacts.html
+++ b/contacts.html
@@ -56,7 +56,7 @@
 							<li><a href="we_create.html">Мы создаем</a></li>
 							<li><a href="we_created.html">Мы создали</a></li>
 							<li><a href="news.html">Новости</a></li>
-							<li><a href="about.html" class="contacts-link">Контакты</a></li>
+							<li><a href="about.html#contacts" class="contacts-link">Контакты</a></li>
 						</ul>
 					</div>
 
