--- a/404.html
+++ b/404.html
@@ -32,30 +32,28 @@
 
 <div class="wrapper">
 
-		<!-- Content -->
-			<div class="content">
+	<!-- Content -->
+		<div class="content">
 
-			<!-- 404 Page -->
+		<!-- 404 Page -->
 
-				<div class="page-not-found">
+			<div class="page-not-found">
 
-					<div class="center-block">
+				<div class="center-block">
 
-						<div class="row">
-							
-							<div class="h-block-404">
-								<h1><span class="small">планета сочи</span> MICE</h1>
-							</div>
+					<div class="row">
+						
+						<div class="h-block-404">
+							<h1><span class="small">планета сочи</span> MICE</h1>
+						</div>
 
-							<h2 class="h2-404">страница не найдена</h2>
+						<h2 class="h2-404">страница не найдена</h2>
 
-							<p class="p-404">404</p>
+						<p class="p-404">404</p>
 
-							<div class="back-link-block">
+						<div class="back-link-block">
 
-								<a href="#" class="transparent-pill">Вернуться на главную</a>
-
-							</div>
+							<a href="index.html" class="transparent-pill">Вернуться на главную</a>
 
 						</div>
 
@@ -63,10 +61,12 @@
 
 				</div>
 
-			<!-- /404 Page -->
-
 			</div>
-		<!-- /Content -->
+
+		<!-- /404 Page -->
+
+		</div>
+	<!-- /Content -->
 
 		<script src="js/scripts.js"></script>
 		<script src="js/additional_scripts.js"></script>
