--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 				<div class="col col-1 left">
 
-					<a href="#" class="logo-link">
+					<a href="index.html" class="logo-link">
 						<img src="img/logo_blue.png" alt=" " >
 					</a>
 
