--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 															<li><a href="#">Meetings</a></li>
 															<li><a href="#">Incetives</a></li>
 															<li><a href="#">Conference</a></li>
-															<li><a href="#">Exibitions</a></li>
+															<li><a href="#">Events</a></li>
 
 														</ul>
 
