--- a/index.html
+++ b/index.html
@@ -72,8 +72,6 @@
 
 	<!-- Site Navigation -->
 
-	<!-- <div class="row right-coord"></div> -->
-
 	<div class="site-nav-block">
 
 		<ul class="site-nav">
@@ -85,7 +83,7 @@
 
 	</div>
 
-	<!-- Site Navigation -->
+	<!-- /Site Navigation -->
 
 		<!-- Sliding Animate Block -->
 
