--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 
 			<!-- Slide 1 -->
 
-				<div class="slide-page slide-1 shape light-nav">
+				<div class="slide-page slide-1 shape light-nav active">
 
 					<div class="back-block">
 
