--- a/we_created.html
+++ b/we_created.html
@@ -70,12 +70,37 @@
 
 	<!-- /Header -->
 
+	<!-- Site Navigation -->
+
+	<div class="site-nav-block">
+
+		<ul class="site-nav"></ul>
+
+		<div class="page-num-block">
+			<p><nobr><span class="current-page"></span> <span class="count-pages"></span></nobr></p>
+		</div>
+
+	</div>
+
+	<!-- /Site Navigation -->
+
+	<!-- Sliding Animate Block -->
+
+	<div class="sliding"></div>
+
+	<div class="back-bg"></div>
+
+	<!-- /Sliding Animate Block -->
+
+
 		<!-- Content -->
 			<div class="content">
 
 			<!-- Slide 1 We Created Page -->
 
-				<div class="slide-page slide-1-we-create show-logo light-nav">
+				<div class="slide-page slide-1-we-create active">
+
+					<div class="center">
 
 						<div class="we-create-slider-block row clearfix">
 
@@ -243,6 +268,8 @@
 
 						</div>
 
+					</div>
+
 				</div>
 
 			<!-- /Slide 1 We Created Page -->
@@ -251,42 +278,46 @@
 
 				<div class="slide-page slide-6 slide-6-shape">
 
-					<div class="row">
-						
-						<div class="form-h">
+					<div class="center">
 
-							<h2>Напишите нам, какое событие<br /> вы хотите организовать</h2>
+						<div class="row">
+							
+							<div class="form-h">
+
+								<h2>Напишите нам, какое событие<br /> вы хотите организовать</h2>
+
+							</div>
+
+							<div class="form-block">
+
+								<div class="input-block">
+
+									<input type="text" placeholder="Как к вам обращаться?" />
+
+								</div>
+
+								<div class="input-block">
+
+									<input type="text" placeholder="Ваш Email или телефон" />
+
+								</div>
+
+								<div class="input-block">
+
+									<input type="text" placeholder="Планируемое событие" />
+
+								</div>
+
+								<div class="submit-block">
+
+									<input class="submit-btn" type="submit" value="Отправить">
+
+								</div>
+
+							</div>
+
 
 						</div>
-
-						<div class="form-block">
-
-							<div class="input-block">
-
-								<input type="text" placeholder="Как к вам обращаться?" />
-
-							</div>
-
-							<div class="input-block">
-
-								<input type="text" placeholder="Ваш Email или телефон" />
-
-							</div>
-
-							<div class="input-block">
-
-								<input type="text" placeholder="Планируемое событие" />
-
-							</div>
-
-							<div class="submit-block">
-
-								<input class="submit-btn" type="submit" value="Отправить">
-
-							</div>
-
-						</div>
-
 
 					</div>
 
@@ -410,6 +441,7 @@
 		<script src="js/additional_scripts.js"></script>
 		<script src="js/slider.js"></script>
 		<script src="js/map.js"></script>
+		<script src="js/sliding.js"></script>
 	
 	</div>
 
