--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script type="text/javascript" src="vendors/js/wow.min.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script>new WOW().init();</script>
-	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 	<link rel="icon" type="image/png" href="favicon/favicon.ico" sizes="16x16">
 	
 	<title>MICE</title>
@@ -98,7 +98,7 @@
 
 			<!-- Slide 1 -->
 
-				<div class="slide-page slide-1 shape light-nav active">
+				<div class="slide-page slide-1 shape light-nav">
 					
 					<div class="back-block">
 
@@ -667,7 +667,7 @@
 
 			<!-- Slide 4 -->
 
-				<div class="slide-page slide-4">
+				<div class="slide-page slide-4 active">
 
 					<div class="center">
 
@@ -681,10 +681,18 @@
 
 								<div class="left-nav-block left">
 
-									<ul class="left-nav-block-list">
-										<li><span>Фотогаллерея</span>
+									<ul class="left-nav-block-list accordeon">
+										<li class="active">Фотогаллерея
 											<ul>
-												<li><span>Видео архив</span>
+												<li>Видео архив
+													<ul>
+														<li><a href="#">Конференция</a></li>
+														<li><a href="#">Гала-ужин</a></li>
+														<li><a href="#">Елана</a></li>
+														<li><a href="#" class="active">Rotary</a></li>
+														<li><a href="#">Газпромнефть</a></li>
+													</ul>
+													<li>Видео архив 2
 													<ul>
 														<li><a href="#">Конференция</a></li>
 														<li><a href="#">Гала-ужин</a></li>
@@ -693,8 +701,32 @@
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
 												</li>
+												</li>
 											</ul>
-										</li>								
+										</li>
+
+										<li>Фотогаллерея
+											<ul>
+												<li>Видео архив
+													<ul>
+														<li><a href="#">Конференция</a></li>
+														<li><a href="#">Гала-ужин</a></li>
+														<li><a href="#">Елана</a></li>
+														<li><a href="#" class="active">Rotary</a></li>
+														<li><a href="#">Газпромнефть</a></li>
+													</ul>
+													<li>Видео архив 2
+													<ul>
+														<li><a href="#">Конференция</a></li>
+														<li><a href="#">Гала-ужин</a></li>
+														<li><a href="#">Елана</a></li>
+														<li><a href="#" class="active">Rotary</a></li>
+														<li><a href="#">Газпромнефть</a></li>
+													</ul>
+												</li>
+												</li>
+											</ul>
+										</li>					
 									</ul>
 
 								</div>
