--- a/index.html
+++ b/index.html
@@ -682,9 +682,9 @@
 								<div class="left-nav-block left">
 
 									<ul class="left-nav-block-list accordeon">
-										<li class="active">Фотогаллерея
+										<li class="active"><span>Фотогаллерея</span>
 											<ul>
-												<li>Видео архив
+												<li><span>Видео архив</span>
 													<ul>
 														<li><a href="#">Конференция</a></li>
 														<li><a href="#">Гала-ужин</a></li>
@@ -692,7 +692,7 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
-													<li>Видео архив 2
+													<li><span>Видео архив 2</span>
 													<ul>
 														<li><a href="#">Конференция</a></li>
 														<li><a href="#">Гала-ужин</a></li>
@@ -705,9 +705,9 @@
 											</ul>
 										</li>
 
-										<li>Фотогаллерея
+										<li><span>Фотогаллерея</span>
 											<ul>
-												<li>Видео архив
+												<li><span>Видео архив</span>
 													<ul>
 														<li><a href="#">Конференция</a></li>
 														<li><a href="#">Гала-ужин</a></li>
@@ -715,7 +715,7 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
-													<li>Видео архив 2
+													<li><span>Видео архив 2</span>
 													<ul>
 														<li><a href="#">Конференция</a></li>
 														<li><a href="#">Гала-ужин</a></li>
