--- a/about.html
+++ b/about.html
@@ -1144,8 +1144,30 @@
 							<div class="clearfix">				
 
 								<div class="left-nav-block left">
+									<ul class="left-nav-block-list accordeon">
+										<li class="active"><span>Фотогаллерея</span>
+											<ul>
+												<li><span>Видео архив</span>
+													<ul>
+														<li><a href="#">Конференция</a></li>
+														<li><a href="#">Гала-ужин</a></li>
+														<li><a href="#">Елана</a></li>
+														<li><a href="#" class="active">Rotary</a></li>
+														<li><a href="#">Газпромнефть</a></li>
+													</ul>
+													<li><span>Видео архив 2</span>
+													<ul>
+														<li><a href="#">Конференция</a></li>
+														<li><a href="#">Гала-ужин</a></li>
+														<li><a href="#">Елана</a></li>
+														<li><a href="#" class="active">Rotary</a></li>
+														<li><a href="#">Газпромнефть</a></li>
+													</ul>
+												</li>
+												</li>
+											</ul>
+										</li>
 
-									<ul class="left-nav-block-list">
 										<li><span>Фотогаллерея</span>
 											<ul>
 												<li><span>Видео архив</span>
@@ -1156,11 +1178,19 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
+													<li><span>Видео архив 2</span>
+													<ul>
+														<li><a href="#">Конференция</a></li>
+														<li><a href="#">Гала-ужин</a></li>
+														<li><a href="#">Елана</a></li>
+														<li><a href="#" class="active">Rotary</a></li>
+														<li><a href="#">Газпромнефть</a></li>
+													</ul>
+												</li>
 												</li>
 											</ul>
-										</li>								
+										</li>					
 									</ul>
-
 								</div>
 
 								<div class="articles-slider-3-block articles_slider_block left">
