--- a/about.html
+++ b/about.html
@@ -74,10 +74,19 @@
 
 	<div class="site-nav-block">
 
-		<ul class="site-nav"></ul>
+		<div class="center-position">
+		
+			<ul class="site-nav">
+			</ul>
 
-		<div class="page-num-block">
-			<p><nobr><span class="current-page"></span> <span class="count-pages"></span></nobr></p>
+			<div class="vertical-line"></div>
+
+			<div class="page-num-block">
+
+				<p class="pages-num"><nobr><span class="current-page"></span> <span class="count-pages"></span></nobr></p>
+
+			</div>
+
 		</div>
 
 	</div>
@@ -1144,6 +1153,7 @@
 							<div class="clearfix">				
 
 								<div class="left-nav-block left">
+
 									<ul class="left-nav-block-list accordeon">
 										<li class="active"><span>Фотогаллерея</span>
 											<ul>
@@ -1155,7 +1165,8 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
-													<li><span>Видео архив 2</span>
+												</li>
+												<li><span>Видео архив 2</span>
 													<ul>
 														<li><a href="#">Конференция</a></li>
 														<li><a href="#">Гала-ужин</a></li>
@@ -1163,7 +1174,6 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
-												</li>
 												</li>
 											</ul>
 										</li>
@@ -1178,7 +1188,8 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
-													<li><span>Видео архив 2</span>
+												</li>
+												<li><span>Видео архив 2</span>
 													<ul>
 														<li><a href="#">Конференция</a></li>
 														<li><a href="#">Гала-ужин</a></li>
@@ -1187,10 +1198,10 @@
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
 												</li>
-												</li>
 											</ul>
 										</li>					
 									</ul>
+									
 								</div>
 
 								<div class="articles-slider-3-block articles_slider_block left">
