--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 	<script type="text/javascript" src="vendors/js/wow.min.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script>new WOW().init();</script>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+	
+<!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
+
 	<link rel="icon" type="image/png" href="favicon/favicon.ico" sizes="16x16">
 	
 	<title>MICE</title>
@@ -74,11 +76,19 @@
 
 	<div class="site-nav-block">
 
-		<ul class="site-nav">
-		</ul>
+		<div class="center-position">
+		
+			<ul class="site-nav">
+			</ul>
 
-		<div class="page-num-block">
-			<p><nobr><span class="current-page"></span> <span class="count-pages"></span></nobr></p>
+			<div class="vertical-line"></div>
+
+			<div class="page-num-block">
+
+				<p class="pages-num"><nobr><span class="current-page"></span> <span class="count-pages"></span></nobr></p>
+
+			</div>
+
 		</div>
 
 	</div>
@@ -667,7 +677,7 @@
 
 			<!-- Slide 4 -->
 
-				<div class="slide-page slide-4 active">
+				<div class="slide-page slide-4">
 
 					<div class="center">
 
@@ -692,7 +702,8 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
-													<li><span>Видео архив 2</span>
+												</li>
+												<li><span>Видео архив 2</span>
 													<ul>
 														<li><a href="#">Конференция</a></li>
 														<li><a href="#">Гала-ужин</a></li>
@@ -700,7 +711,6 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
-												</li>
 												</li>
 											</ul>
 										</li>
@@ -715,7 +725,8 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
-													<li><span>Видео архив 2</span>
+												</li>
+												<li><span>Видео архив 2</span>
 													<ul>
 														<li><a href="#">Конференция</a></li>
 														<li><a href="#">Гала-ужин</a></li>
@@ -723,7 +734,6 @@
 														<li><a href="#" class="active">Rotary</a></li>
 														<li><a href="#">Газпромнефть</a></li>
 													</ul>
-												</li>
 												</li>
 											</ul>
 										</li>					
@@ -1213,19 +1223,6 @@
 
 			</div>
 		<!-- /Content -->
-
-		<!-- Footer -->
-
-<!-- 		<footer>
-			
-			<div class="footer">
-
-
-			</div>			
-
-		</footer> -->
-
-		<!-- /Footer -->
 
 		<script src="js/scripts.js"></script>
 		<script src="js/additional_scripts.js"></script>
