--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
 			<!-- Slide 2 -->
 
-				<div class="slide-page slide-2">
+				<div class="slide-page slide-2 active">
 
 					<div class="center">
 
