--- a/we_created.html
+++ b/we_created.html
@@ -74,10 +74,19 @@
 
 	<div class="site-nav-block">
 
-		<ul class="site-nav"></ul>
+		<div class="center-position">
+		
+			<ul class="site-nav">
+			</ul>
 
-		<div class="page-num-block">
-			<p><nobr><span class="current-page"></span> <span class="count-pages"></span></nobr></p>
+			<div class="vertical-line"></div>
+
+			<div class="page-num-block">
+
+				<p class="pages-num"><nobr><span class="current-page"></span> <span class="count-pages"></span></nobr></p>
+
+			</div>
+
 		</div>
 
 	</div>
