--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 	<script type="text/javascript" src="vendors/js/wow.min.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script>new WOW().init();</script>
-	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+<!-- 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 	<link rel="icon" type="image/png" href="favicon/favicon.ico" sizes="16x16">
 	
 	<title>MICE</title>
@@ -107,7 +107,7 @@
 
 			<!-- Slide 1 -->
 
-				<div class="slide-page slide-1 shape light-nav active">
+				<div class="slide-page slide-1 shape light-nav">
 
 					<div class="back-block">
 
@@ -629,7 +629,7 @@
 
 			<!-- Slide 5 About Page -->
 
-				<div class="slide-page slide-5-about slide-5">
+				<div class="slide-page slide-5-about slide-5 active">
 
 					<div class="center">
 
