--- a/we_create.html
+++ b/we_create.html
@@ -20,7 +20,7 @@
 	<script type="text/javascript" src="vendors/js/wow.min.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script>new WOW().init();</script>
-	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+<!-- 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 	<link rel="icon" type="image/png" href="favicon/favicon.ico" sizes="16x16">
 	
 	<title>MICE</title>
@@ -74,10 +74,19 @@
 
 	<div class="site-nav-block">
 
-		<ul class="site-nav"></ul>
+		<div class="center-position">
+		
+			<ul class="site-nav">
+			</ul>
 
-		<div class="page-num-block">
-			<p><nobr><span class="current-page"></span> <span class="count-pages"></span></nobr></p>
+			<div class="vertical-line"></div>
+
+			<div class="page-num-block">
+
+				<p class="pages-num"><nobr><span class="current-page"></span> <span class="count-pages"></span></nobr></p>
+
+			</div>
+
 		</div>
 
 	</div>
