--- a/about.html
+++ b/about.html
@@ -629,7 +629,7 @@
 
 			<!-- Slide 5 About Page -->
 
-				<div class="slide-page slide-5-about slide-5 active">
+				<div class="slide-page slide-5-about slide-5">
 
 					<div class="center">
 
@@ -1140,7 +1140,7 @@
 
 			<!-- Slide 4 -->
 
-				<div class="slide-page slide-4">
+				<div class="slide-page slide-4 active">
 
 					<div class="center">
 
