--- a/about.html
+++ b/about.html
@@ -50,7 +50,17 @@
 
 				<div class="col col-2 right">
 
-					<div class="main-nav-block">
+					<div class="respmenubtn-box">
+
+						<button class="respmenubtn">					
+							<span></span>
+							<span></span>
+							<span></span>
+						</button>
+
+					</div>
+
+					<div class="main-nav-block scroll">
 						<ul class="main-nav">
 							<li><a href="about.html">Кто мы</a></li>
 							<li><a href="we_create.html">Мы создаем</a></li>
@@ -358,7 +368,7 @@
 
 			<!-- Slide 3 About Page -->
 
-				<div class="slide-page slide-3 active">
+				<div class="slide-page slide-3">
 
 					<div class="center">
 
