--- a/404.html
+++ b/404.html
@@ -8,7 +8,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<link rel="stylesheet" type="text/css" href="vendors/css/animate.css">	
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
@@ -18,14 +17,9 @@
 	<script type="text/javascript" src="vendors/js/jquery.mousewheel.min.js"></script>
 	<script type="text/javascript" src="slick/slick.js"></script>
 	<script type="text/javascript" src="vendors/js/jquery.mCustomScrollbar.concat.min.js"></script>
-	<script type="text/javascript" src="vendors/js/wow.min.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-	<script>new WOW().init();</script>
-<!-- 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
-	<link rel="icon" type="image/png" href="favicon/favicon.ico" sizes="16x16">
-	
-	<title></title>
-	
+	<link rel="icon" type="image/png" href="favicon/favicon.ico" sizes="16x16">	
+	<title>MICE</title>	
 
 </head>
 
@@ -48,9 +42,9 @@
 							<h1><span class="small">планета сочи</span> MICE</h1>
 						</div>
 
-						<h2 class="h2-404">страница не найдена</h2>
+						<h2 class="h2-404 fadeDown">страница не найдена</h2>
 
-						<p class="p-404">404</p>
+						<p class="p-404 fadeRight">404</p>
 
 						<div class="back-link-block">
 
